diesel_compile_tests/tests/fail/derive/bad_table_name.stderr
error: unexpected end of input, expected `=`
       help: the correct format looks like `#[diesel(table_name = foo)]`
  --> tests/fail/derive/bad_table_name.rs:12:20
   |
LL | #[diesel(table_name)]
   |                    ^

error: expected `=`
  --> tests/fail/derive/bad_table_name.rs:19:20
   |
LL | #[diesel(table_name(users))]
   |                    ^

error: expected identifier, found keyword `true`
  --> tests/fail/derive/bad_table_name.rs:26:23
   |
LL | #[diesel(table_name = true)]
   |                       ^^^^

error: expected identifier
  --> tests/fail/derive/bad_table_name.rs:33:23
   |
LL | #[diesel(table_name = "not a path")]
   |                       ^^^^^^^^^^^^
